--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p id="lastModified"></p>
     </footer>
 
-    <script src="scripts/getDate.js"></script>
+    <script src="scripts/getDates.js"></script>
 </body>
 
 </html>
