--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>I I-BUSINESS Chamber</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/chamber-site-plan.css">
+</head>
+
+<body>
+    <header>
+        <img src="images/I-BUSINESS.png" alt="">
+        <nav>
+            <a href="">Home</a>
+            <a href="">Discover</a>
+            <a href="">Directory</a>
+            <a href="">Join</a>
+        </nav>
+    </header>
+
+    <main class="section coral">
+        <h1>Site Plan for I-Business Chamber of Commerce</h1>
+
+        <section>
+            <h2>I-Business Chamber</h2>
+            <p>I Business Chamber of Commerce</p>
+            <p>This name was chosen to represent the city of Bordeaux, which has a dynamic business community and a rich
+                history. This website will serve as a central point for local businesses and the city's economic
+                initiatives.</p>
+        </section>
+
+        <section class="purpose">
+            <h2>Purpose of the Site</h2>
+            <p>The purpose of the site is to provide services to local businesses, act as an economic catalyst, and
+                promote the I Business community. The primary goals of the site are as follows:</p>
+            <ul>
+                <li>Provide resources and services to member businesses to help them grow.</li>
+                <li>Provide information on Chamber of Commerce events and networking activities.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Scenarios</h2>
+            <p>Here are some questions that visitors to the site might ask, which will guide the content of the site:
+            </p>
+            <ul>
+                <li>What events are organized by the Chamber of Commerce this month to promote business-to-business networking?</li>
+                <li>Where can I find contact information for the Chamber's board members?</li>
+                <li>How does Bordeaux's population growth impact the local economy?</li>
+            </ul>
+            <p class="paralink" style="cursor: pointer;" onclick="window.open('https://www.figma.com/file/hp5gfUahfYtcWW9kxagcPS/Chamber?type=design&node-id=0%3A1&mode=design&t=EzpF5MR0JiwPqWG3-1', '_blank');"> Click here to get the Wireframe for large (page 1) and small (page 2) screens</p>
+            
+
+        <section class="color-sheme">
+            <h2>Color Scheme</h2>
+            <p>The color scheme selected for this site includes the following colors:</p>
+            <ul>
+                <li><strong>Gray:</strong> Used for titles and important elements.</li>
+                <li><strong>White and gray:</strong> Used for the main background of the site.</li>
+                <li><strong>Red:</strong> Used for nav a and in the footer of the site.</li>
+                
+            </ul>
+            <p>These colors reflect the professionalism and sobriety of the I Business Chamber of Commerce.</p>
+        </section>
+
+        <section>
+            <h2>Typography</h2>
+            <p>The typography selected for this site includes the following fonts:</p>
+            <ul>
+                <li><strong>Roboto:</strong> Used for headings and subheadings.</li>
+                <li><strong>Open Sans:</strong> Used for the body text.</li>
+            </ul>
+            <p>These fonts are chosen for their readability and modernity.</p>
+        </section>
+    </main>
+
+    <footer class="footer">&copy; Steve CHRISPIN | <span class="foot">I-Business Chamber </span></footer>
+</body>
+
+</html>
