--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="#">Chamber</a>
+        <a href="week01/chamber-site-plan.html">Chamber</a>
         <a href="#">Site Plan</a>
         <a href="#">Form</a>
     </nav>
