--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I I-BUSINESS Chamber</title>
+    <title>I-BUSINESS Chamber</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
         <section>
             <h2>I-Business Chamber</h2>
             <p>I Business Chamber of Commerce</p>
-            <p>This name was chosen to represent the city of Bordeaux, which has a dynamic business community and a rich
+            <p>This name was chosen to represent the city of Port-au-Prince, which has a dynamic business community and a rich
                 history. This website will serve as a central point for local businesses and the city's economic
                 initiatives.</p>
         </section>
@@ -56,7 +56,7 @@
             <ul>
                 <li>What events are organized by the Chamber of Commerce this month to promote business-to-business networking?</li>
                 <li>Where can I find contact information for the Chamber's board members?</li>
-                <li>How does Bordeaux's population growth impact the local economy?</li>
+                <li>How does Port-au-Prince's population growth impact the local economy?</li>
             </ul>
             <p class="paralink" style="cursor: pointer;" onclick="window.open('https://www.figma.com/file/hp5gfUahfYtcWW9kxagcPS/Chamber?type=design&node-id=0%3A1&mode=design&t=EzpF5MR0JiwPqWG3-1', '_blank');"> Click here to get the Wireframe for large (page 1) and small (page 2) screens</p>
             
