--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <span>Steve Chrispin</span>
     </header>
 
-    <nav>
+    <nav class="navalist">
         <a href="#">Home</a>
-        <a href="week01/chamber-site-plan.html">Chamber</a>
+        <a href="#">Chamber</a>
         <a href="#">Site Plan</a>
         <a href="#">Form</a>
     </nav>
