--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I-BUSINESS Chamber</title>
-
+    <meta name="description" content=" I-Business Commerce chamber Site Plan">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
