--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I-BUSINESS Chamber</title>
+    <title>I-BUSINESS Chamber Site Plan</title>
     <meta name="description" content=" I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
     <link rel="preconnect" href="https://fonts.googleapis.com">
