--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -31,7 +31,7 @@
 
         <section>
             <h2>I-Business Chamber</h2>
-            <p>I Business Chamber of Commerce is designed to support the business community in Bordeaux.</p>
+            <p>I Business Chamber of Commerce is the name of the Site Plan designed to support the business community in Bordeaux.</p>
         </section>
 
         <section class="purpose">
