--- a/week02/design.html
+++ b/week02/design.html
@@ -22,7 +22,9 @@
         <section>
             <h3>List</h3>
             <ul>
-                <li>Item 1</li>
+                <li>
+                    <a href="https://codepen.io/Chrispinsteve/pen/JjVQpwP" target="_blank">CodePen</a>
+                </li>
                 <li>Item 2</li>
                 <li>Item 3<br><br></li>
                 <li>Item 4</li>
