--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
 
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
+            <ul id="Activities"></ul>
         </section>
 
         <section class="card">
@@ -65,4 +62,5 @@
 
     <script src="scripts/getDates.js"></script>
 </body>
+
 </html>
