--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
 
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul id="Activities"></ul>
+            <ul id="Activities">
+                <li>
+                    <a href="https://chrispinsteve.github.io/wdd230/week02/bom.html" target="_blank">Book of Mormon - Top 10</a>
+                </li>
+                <li>
+                    <a href="https://codepen.io/Chrispinsteve/pen/JjVQpwP" target="_blank">CodePen</a>
+                </li>
+            </ul>
         </section>
 
         <section class="card">
