--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
     
-    <link rel="shortcut icon" type="img/jpg" href="images/BusinessIcon.jpg">
+    <link rel="shortcut icon"  type="img/png" href = "images/ibusinessicon.png">
 </head>
 
 <body>
