--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
 
     <!--meta Open Graph-->
     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/images/house.png">
