--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
 
     <!--meta Open Graph-->
     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="article">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/images/house.png">
@@ -21,6 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" type="img/png" href="images/ibusinessicon.png">
@@ -42,11 +43,11 @@
     <div class="general">
 
         <div class="left-side">
-                    <a href="">Membership</a>
-                    <a href="">News</a>
-                
-                    <a href="">Events</a>
-                
+            <a href="">Membership</a>
+            <a href="">News</a>
+
+            <a href="">Events</a>
+
         </div>
 
         <main class="right-side">
@@ -89,7 +90,7 @@
     </div>
 
     <footer>
-        &copy;2024 Steve Chrispin - I-Business Commerce  Chamber
+        &copy;2024 Steve Chrispin - I-Business Commerce Chamber
     </footer>
 
     <script src="scripts/chamber.js"></script>
