--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <main class="right-side">
-            <h1>Summary</h1>
+            <h1>Port-au-Prince Chamber of Commerce</h1>
             <section class="content-1">
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
