--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I-BUSINESS Chamber of Commerce</title>
+    <title>I-BUSINESS Chamber Site Plan</title>
     <meta name="description" content=" I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
 
     <!--meta Open Graph-->
     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="article">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/images/house.png">
@@ -39,6 +39,7 @@
         </nav>
     </header>
 
+
     <div class="general">
 
         <div class="left-side">
@@ -50,8 +51,9 @@
         </div>
 
         <main class="right-side">
-            <h1>Port-au-Prince Chamber of Commerce</h1>
+            <h1>Summary</h1>
             <section class="content-1">
+                <h3>Overview</h3> 
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
@@ -64,6 +66,7 @@
             </section>
 
             <section class="content-2">
+                <h3>Overview</h3> 
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
@@ -76,6 +79,7 @@
             </section>
 
             <section class="content-3">
+                <h3>Overview</h3> 
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
