--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,6 +36,10 @@
             <a href="#">Discover</a>
             <a href="#">Directory</a>
             <a href="#">Join</a>
+
+            <div id="mode">
+                🌙
+            </div>
         </nav>
     </header>
 
