--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,9 +37,7 @@
             <a href="#">Directory</a>
             <a href="#">Join</a>
 
-            <div id="mode">
-                🌙
-            </div>
+
         </nav>
     </header>
 
@@ -51,13 +49,15 @@
             <a href="">News</a>
 
             <a href="">Events</a>
-
+            <div id="mode">
+                🌙
+            </div>
         </div>
 
         <main class="right-side">
             <h1>Summary</h1>
             <section class="content-1">
-                <h3>Overview</h3> 
+                <h3>Overview</h3>
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
@@ -70,7 +70,7 @@
             </section>
 
             <section class="content-2">
-                <h3>Overview</h3> 
+                <h3>Overview</h3>
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
@@ -83,7 +83,7 @@
             </section>
 
             <section class="content-3">
-                <h3>Overview</h3> 
+                <h3>Overview</h3>
                 <img src="images/I-BUSINESS.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
@@ -98,8 +98,8 @@
     </div>
 
     <footer>
-        &copy;2024 Steve Chrispin - I-Business Commerce Chamber
-    </footer>
+        &copy;2024 Steve Chrispin - Tel : +509 5537-399
+        I-Business Commerce Chamber - wdd 230</footer>
 
     <script src="scripts/chamber.js"></script>
 </body>
