--- a/chamber/index.html
+++ b/chamber/index.html
@@ -57,15 +57,16 @@
         <main class="right-side">
             <h1>Port-au-Prince Chamber of Commerce</h1>
             <section class="content-1">
-                <h3>Overview</h3>
-                <img src="images/I-BUSINESS.png" alt="" width="300">
+                <h3 id="title">Haiti Bank</h3>
+                <img src="images/sogebank.jpeg" alt="" width="300">
                 <article>
-                    <h3>Purpose of the Site</h3>
-                    <p>The site aims to support local businesses and promote the I Business <br>community.
-                        The primary goals are as follows:<br>
-
-                        Provide resources and services to member businesses.<br>
-                        Offer information on Chamber events and networking opportunities.</p>
+                    <h3>SOGEBANK</h3>
+                    <p>Société Générale Haïtienne de Banque, S.A.<br> 
+                        (Sogebank) is a Haitian bank. It is one of<br> 
+                        four private banks, along with Unibank,
+                        Capital Bank and Banque de l'Union haïtienne, 
+                        and one of the three largest<br> banks in the 
+                        Haitian banking sector.</p>
                 </article>
             </section>
 
