--- a/chamber/index.html
+++ b/chamber/index.html
@@ -95,6 +95,20 @@
                         Offer information on Chamber events and networking opportunities.</p>
                 </article>
             </section>
+
+            <section class="weather">
+                <h3>Weather</h3>
+                <img src="images/weather.png" alt="" width="300">
+                <article>
+                    <h3>Port-au-Prince 32 / 23 °C</h3>
+                    <p>Port-au-Prince Extended Forecast with high and low temperatures <br>
+                        Showers early, then partly cloudy overnight. Low 77F.<br>
+                        Winds light and variable. Chance of rain 50%
+
+                        Provide resources and services to member businesses.<br>
+                        Offer information on Chamber events and networking opportunities.</p>
+                </article>
+            </section>
         </main>
     </div>
 
