--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
-    <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/images/house.png">
+    <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/I-BUSINESS.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
