--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <li>
                     <a href="https://codepen.io/Chrispinsteve/pen/JjVQpwP" target="_blank">CodePen</a>
                 </li>
+
+                <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
             </ul>
         </section>
 
