--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="styles/lazyload.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Lazy Load demostration</h1>
+    </header>
+
+    <main>
+        <img src="//via.placeholder.com/400x600/" alt="" loading="lazy">
+        <img src="//via.placeholder.com/400x600/" alt="" loading="lazy">
+        <img src="//via.placeholder.com/400x600/" alt="" loading="lazy">
+        <img src="//via.placeholder.com/400x600/" alt="" loading="lazy">
+        <img src="//via.placeholder.com/400x600/" alt="" loading="lazy">
+    </main>
+
+    <footer>
+        <p>&copy; <span id="date"></span> | Steve Chrispin | Haiti</p>
+        <p id="lastModified"></p>
+    </footer>
+
+    <script src="scripts/lazyload.js"></script>
+</body>
+</html>
