--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 </li>
 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
+                <li>Week 03: <a href="https://chrispinsteve.github.io/wdd230/week03/lazyload.html">Lazy web</a></li>
             </ul>
         </section>
 
