--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
                 <li>Week 03: <a href="https://chrispinsteve.github.io/wdd230/week03/lazyload.html">Lazy web</a></li>
+                <li>week 03: <a hre="https://chrispinsteve.github.io/wdd230/week03/responsive-images.html">Responsive Images</a></li>
             </ul>
         </section>
 
