--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
-    
-    <link rel="shortcut icon"  type="img/png" href = "images/ibusinessicon.png">
+
+    <link rel="shortcut icon" type="img/png" href="images/ibusinessicon.png">
 </head>
 
 <body>
-    <header >
-        <img src="images/profile.jpg" alt="Profile Photo Lab" width="200">
+    <header>
+        <img src="images/profile.webp" alt="Profile Photo Lab" width="200">
         <span>Steve Chrispin</span>
         <div id="mode">
             🌙
@@ -47,6 +47,15 @@
     </nav>
 
     <main>
+        <picture class="hero">
+            <source media="(max-width: 400px)" srcset="images/hero-small.webp">
+            <source media="(max-width: 960px)" srcset="images/hero-medium.webp">
+            <img src="images/hero-larger.webp" alt="Table setting" width="960">
+        </picture>
+        <div class="herolabel">
+            <p>California Temple</p>
+        </div>
+
         <h1>WDD 230: Web Frontend Development</h1>
 
         <section class="card">
@@ -54,7 +63,8 @@
             <ul id="Activities">
                 <li>
                     <a href="https://chrispinsteve.github.io/wdd230/week02/bom.html" target="_blank">Book of Mormon -
-                        Top 10</a>
+                        Top 10
+                    </a>
                 </li>
                 <li>
                     <a href="https://codepen.io/Chrispinsteve/pen/JjVQpwP" target="_blank">CodePen</a>
@@ -62,17 +72,22 @@
 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
                 <li>Week 03: <a href="https://chrispinsteve.github.io/wdd230/week03/lazyload.html">Lazy web</a></li>
-                <li>week 03: <a href="https://chrispinsteve.github.io/wdd230/week03/responsive-images.html">Responsive Images</a></li>
             </ul>
         </section>
 
         <section class="card">
             <h2>Information</h2>
             <p>Weather: </p>
-            <p>Number Of visits: </p>
+            <p><span class="label">Number Of visits: </span>
+                <span class="visits"></span>
+            </p>
         </section>
     </main>
 
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d121048.04380827247!2d-72.302592!3d18.5401344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sht!4v1715494183917!5m2!1sfr!2sht"
+        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer>
         <p>&copy; <span id="date"></span> | Steve Chrispin | Haiti</p>
         <p id="lastModified"></p>
