--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,11 +36,8 @@
             <a href="#">Discover</a>
             <a href="#">Directory</a>
             <a href="#">Join</a>
-
-
         </nav>
     </header>
-
 
     <div class="general">
 
@@ -58,7 +55,7 @@
             <h1>Port-au-Prince Chamber of Commerce</h1>
             <section class="content-1">
                 <h3 id="title">Haiti Bank</h3>
-                <img src="images/sogebank.jpeg" alt="" width="300">
+                <img src="images/sogebank.webp" alt="" width="300">
                 <article>
                     <h3>SOGEBANK</h3>
                     <p>Société Générale Haïtienne de Banque, S.A.<br> 
@@ -113,8 +110,11 @@
     </div>
 
     <footer>
-        &copy;2024 Steve Chrispin - Tel : +509 5537-399
-        I-Business Commerce Chamber - wdd 230</footer>
+        <span id="date"></span> 
+        <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399
+        I-Business Commerce Chamber - wdd 230
+        <p id="lastModified"></p>
+    </footer>
 
     <script src="scripts/chamber.js"></script>
 </body>
