--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 </li>
                 <li>
                     <a href="https://codepen.io/Chrispinsteve/pen/JjVQpwP" target="_blank">CodePen</a>
+                    <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target = "blank">Pseudo-Class</a>
                 </li>
 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
