--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
                 </li>
                 <li>
                     <a href="https://codepen.io/Chrispinsteve/pen/JjVQpwP" target="_blank">CodePen</a>
-                    <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target = "blank">Pseudo-Class</a>
                 </li>
 
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
                 <li>Week 03: <a href="https://chrispinsteve.github.io/wdd230/week03/lazyload.html">Lazy web</a></li>
+                <li>
+                    Week 04: <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target="blank">Pseudo-Class></a>
+                </li>
             </ul>
         </section>
 
