--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
-    <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/I-BUSINESS.png">
+    <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/i-business.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 
 <body>
     <header>
-        <img src="images/I-BUSINESS.png" alt="I-BUSINESS Logo">
+        <img src="images/i-business.png" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
             <a href="#">Home</a>
@@ -69,7 +69,7 @@
 
             <section class="content-2">
                 <h3>Overview</h3>
-                <img src="images/I-BUSINESS.png" alt="" width="300">
+                <img src="images/i-business.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
                     <p>The site aims to support local businesses and promote the I Business <br>community.
@@ -82,7 +82,7 @@
 
             <section class="content-3">
                 <h3>Overview</h3>
-                <img src="images/I-BUSINESS.png" alt="" width="300">
+                <img src="images/i-business.png" alt="" width="300">
                 <article>
                     <h3>Purpose of the Site</h3>
                     <p>The site aims to support local businesses and promote the I Business <br>community.
