--- a/chamber/index.html
+++ b/chamber/index.html
@@ -110,6 +110,7 @@
     </div>
 
     <footer>
+        <a href="#" class="cta-link">Join Us Today</a>
         <span id="date"></span> 
         <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399
         I-Business Commerce Chamber - wdd 230
