--- a/chamber/index.html
+++ b/chamber/index.html
@@ -93,6 +93,20 @@
                 </article>
             </section>
 
+            <section class="event">
+                <h3>Events</h3>
+                <article>
+                    <h3>13th WTO Ministerial Conference in Abu Dhabi</h3>
+                    <p>Minister Saint-Jean's intervention at the Ministerial<br> 
+                        Conference of the LDC Group prior to the 13th LDC Conference<br>
+                        WTO Ministerial Conference in Abu Dhabi at the end of February<br> 
+                        2024. Home First of all, I would like to salute the Chairman of<br> 
+                        the group, His Excellency the Minister of Trade and Tourism of<br> 
+                        Djibouti
+                    </p>
+                </article>
+            </section>
+
             <section class="weather">
                 <h3>Weather</h3>
                 <img src="images/weather.png" alt="" width="300">
