--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -18,8 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -78,57 +77,69 @@
         <main class="Discover">
             <h1 class="h11">Port-au-Prince Chamber of Commerce</h1>
             <section class="content-disc">
-                <picture>
-                    <source media="(max-width: 300px)" srcset="images/sogebank.webp">
-                    <source media="(max-width: 350px)" srcset="images/sogebank">
-                    <img src="images/sogebank.webp" loading="lazy" alt="Table setting" width="500" height="250">
-                </picture>
-                <caption>SOGEBANK</caption>
+                <figure>
+                    <picture>
+                        <source media="(max-width: 300px)" srcset="images/sogebank.webp">
+                        <source media="(max-width: 350px)" srcset="images/sogebank">
+                        <img src="images/sogebank.webp" loading="lazy" alt="Table setting" width="500" height="250">
+                    </picture>
+                    <figcaption>SOGEBANK</figcaption>
+                </figure>
             </section>
 
             <section class="content-disc2">
-                <picture>
-                    <source media="(max-width: 250px)" srcset="images/I-BUSINESS.webp">
-                    <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
-                    <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
-                </picture>
-                <caption>I Business</caption>
+                <figure>
+                    <picture>
+                        <source media="(max-width: 250px)" srcset="images/I-BUSINESS.webp">
+                        <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
+                        <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
+                    </picture>
+                    <figcaption>I Business</figcaption>
+                </figure>
             </section>
 
             <section class="content-disc3">
-                <picture>
-                    <source media="(max-width: 300px)" srcset="images/I-BUSINESS.webp">
-                    <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
-                    <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
-                </picture>
-                <caption>I Business</caption>
+                <figure>
+                    <picture>
+                        <source media="(max-width: 300px)" srcset="images/I-BUSINESS.webp">
+                        <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
+                        <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
+                    </picture>
+                    <figcaption>I Business</figcaption>
+                </figure>
             </section>
 
             <section class="weather-disc">
-                <picture>
-                    <source media="(max-width: 300px)" srcset="images/I-BUSINESS.webp">
-                    <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
-                    <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
-                </picture>
-                <caption>I Business</caption>
+                <figure>
+                    <picture>
+                        <source media="(max-width: 300px)" srcset="images/I-BUSINESS.webp">
+                        <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
+                        <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
+                    </picture>
+                    <figcaption>I Business</figcaption>
+                </figure>
             </section>
 
             <section class="weather-disc">
-                <picture>
-                    <source media="(max-width: 300px)" srcset="images/weather.webp">
-                    <source media="(max-width: 350px)" srcset="images/weather.webp">
-                    <img src="images/weather.webp" loading="lazy" alt="Table setting" width="400" height="150">
-                </picture>
-                <caption>Weather</caption>
+                <figure>
+                    <picture>
+                        <source media="(max-width: 300px)" srcset="images/weather.webp">
+                        <source media="(max-width: 350px)" srcset="images/weather.webp">
+                        <img src="images/weather.webp" loading="lazy" alt="Table setting" width="400" height="150">
+                    </picture>
+                    <figcaption>Weather</figcaption>
+                </figure>
             </section>
 
             <section class="weather-disc">
-                <picture>
-                    <source media="(max-width: 300px)" srcset="images/weather.webp">
-                    <source media="(max-width: 350px)" srcset="images/weather.webp">
-                    <img src="images/weather.webp" loading="lazy" alt="Table setting" width="400" height="150">
-                </picture>
-                <caption>Weather</caption>
+                <figure>
+                    <picture>
+                        <source media="(max-width: 300px)" srcset="images/weather.webp">
+                        <source media="(max-width: 350px)" srcset="images/weather.webp">
+                        <img src="images/weather.webp" loading="lazy" alt="Table setting" width="400" height="150">
+                    </picture>
+                    <figcaption>Weather</figcaption>
+                </figure>
             </section>
         </main>
     </div>
