--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -145,11 +145,13 @@
     </div>
 
     <footer>
-        <span id="date"></span>
+        <a href="#" class="cta-link">Join Us Today</a>
+        <span id="date"></span> 
         <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399
         I-Business Commerce Chamber - wdd 230
         <p id="lastModified"></p>
     </footer>
+
 
     <script src="scripts/chamber.js"></script>
 </body>
