--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I-BUSINESS Chamber of Commerce</title>
+    <title>IBUSINESS Chamber of Commerce</title>
     <meta name="description" content=" I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
 
@@ -28,7 +28,7 @@
 
 <body>
     <header>
-        <img src="images/I-BUSINESS.webp" alt="I-BUSINESS Logo">
+        <img src="images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
             <a href="#">Home</a>
@@ -90,9 +90,9 @@
             <section class="content-disc2">
                 <figure>
                     <picture>
-                        <source media="(max-width: 250px)" srcset="images/I-BUSINESS.webp">
-                        <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
-                        <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
+                        <source media="(max-width: 250px)" srcset="images/i-business.webp">
+                        <source media="(max-width: 350px)" srcset="images/i-business.webp">
+                        <img src="images/i-business.webp" loading="lazy" alt="Table setting" width="500" height="150">
                     </picture>
                     <figcaption>I Business</figcaption>
                 </figure>
@@ -101,9 +101,9 @@
             <section class="content-disc3">
                 <figure>
                     <picture>
-                        <source media="(max-width: 300px)" srcset="images/I-BUSINESS.webp">
-                        <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
-                        <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
+                        <source media="(max-width: 300px)" srcset="images/i-business.webp">
+                        <source media="(max-width: 350px)" srcset="images/i-business.webp">
+                        <img src="images/i-business.webp" loading="lazy" alt="Table setting" width="500" height="150">
                     </picture>
                     <figcaption>I Business</figcaption>
                 </figure>
@@ -112,9 +112,9 @@
             <section class="weather-disc">
                 <figure>
                     <picture>
-                        <source media="(max-width: 300px)" srcset="images/I-BUSINESS.webp">
-                        <source media="(max-width: 350px)" srcset="images/I-BUSINESS.webp">
-                        <img src="images/I-BUSINESS.webp" loading="lazy" alt="Table setting" width="500" height="150">
+                        <source media="(max-width: 300px)" srcset="images/i-business.webp">
+                        <source media="(max-width: 350px)" srcset="images/i-business.webp">
+                        <img src="images/i-business.webp" loading="lazy" alt="Table setting" width="500" height="150">
                     </picture>
                     <figcaption>I Business</figcaption>
                 </figure>
