--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <li>
                     Week 04: <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target="blank">Pseudo-Class></a>
                 </li>
+                <li>
+                    Week 04: <a href="https://www.w3schools.com/css/exercise.asp?filename=exercise_combinators4" target="blank">Pseudo-Class></a>
+                </li>
             </ul>
         </section>
 
