--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     Week 04: <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target="blank">Pseudo-Class></a>
                 </li>
                 <li>
-                    Week 04: <a href="https://www.w3schools.com/css/exercise.asp?filename=exercise_combinators4" target="blank">Pseudo-Class></a><br>
+                    Week 04: <a href="https://www.w3schools.com/css/exercise.asp?filename=exercise_combinators4" target="blank"> W3 School Exercices</a>
                     <a href="https://chrispinsteve.github.io/wdd230/week04/tablebuilt.html" target="blank">Table Built</a>
                 </li>
             </ul>
