--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
                 <li>Week 03: <a href="https://chrispinsteve.github.io/wdd230/week03/lazyload.html">Lazy web</a></li>
                 <li>
-                    Week 04: <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target="blank">Pseudo-Class></a>
+                    Week 04: <a href="https://codepen.io/Chrispinsteve/pen/OJYVKjp" target="blank">Pseudo-Class</a>
                 </li>
                 <li>
-                    Week 04: <a href="https://www.w3schools.com/css/exercise.asp?filename=exercise_combinators4" target="blank"> W3 School Exercices</a>
+                    Week 04: <a href="https://www.w3schools.com/css/exercise.asp?filename=exercise_combinators4" target="blank"> W3 School Exercices</a><br>
                     <a href="https://chrispinsteve.github.io/wdd230/week04/tablebuilt.html" target="blank">Table Built</a>
                 </li>
             </ul>
