--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Steve Chrispin">
+    <meta name="description" content="Form Sign-Up fill out and submit">
     <title>Form</title>
     <link rel="stylesheet" href="styles/form.css">
 </head>
