--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
         <div id="formmessage"></div>
         <form method="get" action="record.html" class="form1">
             <fieldset>
-                <legend>Sign-Up</legend>
+                <legend title="Fill in the form to Sign-Up">Sign-Up</legend>
                 <label>Username*<input type="text" name="username" id="username" required
                         placeholder="Username"></label>
 
@@ -40,7 +40,7 @@
                     placeholder="Password">
                 <label for="pass2">Confirm Password*</label>
                 <input type="password" name="password" id="pass2" required placeholder="Confirm Password">
-                
+
                 <label for="email">Email*</label>
                 <input type="email" name="Email" id="email" required pattern="[a-zA-Z0-9._%+-]+@byui\.edu$"
                     placeholder="chrispin@gmail.com">
