--- a/form.html
+++ b/form.html
@@ -81,7 +81,7 @@
         <p id="lastModified"></p>
     </footer>
 
-    <script src="script/form.js"></script>
+    <script src="scripts/form.js"></script>
 </body>
 
 </html>
