--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I-BUSINESS Chamber of Commerce</title>
+    <title> Join IBUSINESS Chamber of Commerce</title>
     <meta name="description" content=" I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
 
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <img src="images/I-BUSINESS.webp" alt="I-BUSINESS Logo">
+        <img src="images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
             <a href="index.html">Home</a>
