--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IBUSINESS Chamber of Commerce</title>
+    <title>Discover IBUSINESS Chamber of Commerce</title>
     <meta name="description" content=" I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
 
@@ -38,7 +38,6 @@
             <div id="mode">
                 🌙
             </div>
-
         </nav>
     </header>
 
