--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,13 +29,16 @@
 
 <body>
     <header>
-        <img src="images/i-business.png" alt="I-BUSINESS Logo">
+        <img src="images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
             <a href="#">Home</a>
             <a href="#">Discover</a>
             <a href="#">Directory</a>
             <a href="#">Join</a>
+            <div id="mode">
+                🌙
+            </div>
         </nav>
     </header>
 
@@ -46,9 +49,6 @@
             <a href="">News</a>
 
             <a href="">Events</a>
-            <div id="mode">
-                🌙
-            </div>
         </div>
 
         <main class="right-side">
