--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -29,7 +29,7 @@
 
 <body>
     <header>
-        <img src="images/I-BUSINESS.webp" alt="I-BUSINESS Logo">
+        <img src="images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
             <a href="#">Home</a>
